Bug 319794 - Mailing-List menu item not greyed out
Summary: Mailing-List menu item not greyed out
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: UI (other bugs)
Version First Reported In: 4.10.2
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-05-13 17:17 UTC by Graeme Hewson
Modified: 2013-05-14 06:09 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.10.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Graeme Hewson 2013-05-13 17:17:43 UTC
To reproduce:

Go to a local folder with "folder holds a mailing list" ticked in the Mailing List tab of the Folder Properties.

Go to another folder which doesn't hold a mailing list.

Observe that Message / Mailing-List menu item isn't greyed out, and sub-menu values are for previous folder.
Comment 1 Laurent Montel 2013-05-14 05:43:24 UTC
I confirm it.
Comment 2 Laurent Montel 2013-05-14 06:09:07 UTC
Git commit cac77f27d0b6c3a64b801c05833e0830b2d7b3c0 by Montel Laurent.
Committed on 14/05/2013 at 08:08.
Pushed by mlaurent into branch 'KDE/4.10'.

Fix Bug 319794 - Mailing-List menu item not greyed out

FIXED-IN: 4.10.4

M  +1    -0    kmail/kmmainwidget.cpp
M  +9    -3    kmail/messageactions.cpp
M  +1    -0    kmail/messageactions.h

http://commits.kde.org/kdepim/cac77f27d0b6c3a64b801c05833e0830b2d7b3c0