Fix Bug 319794 - Mailing-List menu item not greyed out

FIXED-IN: 4.10.4
BUG: 319794